Updated About Me and text edits

--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <img src="https://via.placeholder.com/200" alt="My Photo" />
-            <p>Hi, I’m [Your Name], an aspiring web developer with a passion for creating beautiful, functional websites. My strengths include [Attribute 1], [Attribute 2], and [Attribute 3].</p>
+            <p>My name is Christopher Rodriguez, and I am Mexican. I’m currently a high school student with big goals for my future. While I’m new to coding, I’m eager to learn and improve every day. I’m a determined and creative person who enjoys taking on challenges and finding solutions. Outside of school, I enjoy listening to music and exploring new ideas, and I believe my positive outlook and willingness to learn will help me grow as an aspiring web developer.</p>
         </section>
 
         <section id="skills">
