--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 
         <section id="testimonials">
             <h2>Testimonials</h2>
-            <div class="testimonial">"This student is hardworking and always eager to learn!" - SYEP Coordinator</div>
-            <div class="testimonial">"A great team player with strong communication skills." - Peer</div>
+            <div class="testimonial">Christopher provided excellent class notes for Global and submitted solid quality work. He is very capable and can apply himself well. In groups, he is often on task and can collaborate well. – Mr. Michael Newman, Global Studies Teacher</div>
+            <div class="testimonial">Christopher was an engaged and thoughtful student in Film. He contributed creative ideas to class discussions and approached assignments with focus and effort. He showed growth throughout the year and worked well with his peers. – Ms. Brownstein, Film Teacher</div>
         </section>
     </div>
 </body>
